Initial bootable version for the ts4900

--- a/arch/arm/mach-imx/Kconfig
+++ b/arch/arm/mach-imx/Kconfig
@@ -863,6 +863,9 @@ config SOC_VF610
 	help
 	  This enable support for Freescale Vybrid VF610 processor.
 
+config MACH_TS4900
+   bool "Technologic Systems TS-4900 support"
+   
 endif
 
 source "arch/arm/mach-imx/devices/Kconfig"
